public/stylesheets/application.scss
@import "_variables.scss";
@import "_form.scss";

body {
  font-family: 'Muli', sans-serif;
  font-size: 12px;
  padding-bottom: 20px;
  background-color: white;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Lato', sans-serif;
}

h1, h2 {
  color: $blue;
  text-transform: uppercase;
  font-weight: bold;
}

h3, h4, h5, h6 {
  color: $red;
  font-weight: normal;
}

#nav-logo {
  opacity: 0;
  padding: 0;
  display: inline-block;
  transition: all 1s;
  pointer-events: none;
  &.active {
    opacity: 1;
    pointer-events: auto;
  }
  img {
    margin-top: -3px;
    height: 65px;
  }
}

.navbar {
  text-align: center;
  padding: 30px 0;
  height: $navbar-md-height;
  background-color: $dark-gray;
  .navbar-inner {
    .nav {
      display: inline-block;
      float: none;
      font-size: 18px;
      font-family: 'Muli', sans-serif;
      a, a:hover, a:visited {
        color: $red;
        background: transparent;
        text-transform: uppercase;
      }
      li {
        padding: 0 15px;
        vertical-align: middle;
        &.active {
          a {
            color: white;
            text-decoration: none;
          }
        }
      }
    }
  }
}

.hero-area {
  background: $accent-background-color;
  height: 100%;
  width: 100%;
  margin-bottom: -5vw;
  &:after {
    content: " ";
    height: 2vw;
    width: 100%;
    background-color: white;
  }
}

.main-logo-background {
  display: table;
  vertical-align: middle;
}

.main-logo-container {
  display: table-cell;
  width: 100%;
  height: 100%;
  vertical-align: middle;
  img {
    width: 60%;
    max-width: 460px;
  }
}

.section-text {
  h2 {
    margin: 0 0 5px 0;
    padding: 0;
    font-size: 23px;
  }
  h3 {
    font-size: 15px;
    margin: 0 0 10px 0;
    padding: 0;
  }
  p:last-child {
    margin-bottom: 0;
  }
}

.contact-form-container {
  background: $accent-background-color;
  padding-top: 60px;
}

.contact-form-introduction {
  font-size: 48px;
  color: $red;
  margin: 0;
  padding: 0 0 20px 0;
}

.contact-form-submit {
  width: 200px;
}

.full-screen {
  height: 100%;
}

.section-text {
  display: flex;
  display: -webkit-flex;
  justify-content: center;
  -webkit-justify-content: center;
  align-items: center;
  -webkit-align-items: center;
  height: 100%;
  padding-top: $navbar-md-height;
}

.jagged-common {
  height: 5vw;
  background-size: 100% 100%;
}

.jagged-bottom-out-left {
  @extend .jagged-common;
  background-color: white;
  background-image: url('../images/jagged-bottom-out-left.svg');
}

.jagged-top-in-left {
  @extend .jagged-common;
  background-color: white;
  background-image: url('../images/jagged-top-in-left.svg');
}

.jagged-top-in-right {
  @extend .jagged-common;
  background-color: white;
  background-image: url('../images/jagged-top-in-right.svg');
}

.jagged-bottom-out-right {
  @extend .jagged-common;
  background-color: white;
  background-image: url('../images/jagged-bottom-out-right.svg');
}

.dark-background {
  background-color: $dark-gray;
}

.dark-background-spacer {
  content: " ";
  background-color: $dark-gray;
  display: block;
  width: 100%;
  height: 60px;
}


.navbar-toggle {
  margin: 8px 0;
  padding: 9px 0;
  .icon-bar {
    background-color: white;
    transition: all 0.25s;
    -webkit-transition: all 0.25s;
    -moz-transition: all 0.25s;
  }
  &[aria-expanded="true"] {
    .icon-bar {
      position: relative;
      top: 0;
      &:nth-child(2) {
        top: 6px;
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
        -moz-transform: rotate(45deg);
      }
      &:nth-child(3) {
        opacity: 0;
      }
      &:nth-child(4) {
        top: -6px;
        transform: rotate(-45deg);
        -webkit-transform: rotate(-45deg);
        -moz-transform: rotate(-45deg);
      }
    }
  }
}

@media (min-width: 1200px) {
  .container {
    width: 840px;
  }
}

@media(max-width: 991px) {
  .nav {
    li {
      a {
        padding-left: 0;
        padding-right: 0;
      }
    }
  }
  .section-text {
    margin: 0;
    padding: 0;
    height: auto;
    .row {
      padding-top: 60px;
      padding-bottom: 60px;
    }
  }
}

@media(max-width: 768px) {

  .navbar {
    padding: 0;
    height: 45px;
    .navbar-inner {
      text-align: left;
      .nav {
        li {
          padding: 0;
          a {
            padding: 20px;
            font-weight: bold;
            font-size: 28px; 
          }
        }
      }
    }
  }

  .navbar-collapse, .navbar-collapse.in {
    background: $dark-gray;
    position: fixed;
    right: 0;
    left: 0;
    bottom: 0;
    top: 45px;
    margin: 0;
    max-height: none;
    height: 100%;
  }

  .top-section {
    padding-top: 50px;
  }

  .navbar-brand {
    opacity: 1;
    margin: 13px 20px 0 20px;
    padding: 0;
    height: auto;
    img {
      height: 25px;
    }
  }

  .navbar-toggle {
    margin-right: 10px;
    .icon-bar {
      background: white;
    }
  }

  .accent-background {
    height: auto;
    padding: 50px 0;
  }

  .reach-hearts-logo-container {
    height: auto;
  }

  .scene-image {
    opacity: 1;
  }

  .hero-outer, .hero-inner {
    height: auto;
  }

  .hero-contents {
    @media (orientation: portrait) {
      padding-top: 40vw;
    }
    @media (orientation: landscape) {
      padding-top: 20vw;
    }
  }

  .section-image {
    opacity: 1;
    margin-bottom: 35px;
  }

  .contact-form-introduction {
    font-size: 25px;
    margin-bottom: 25px;
  }

  .contact-form-submit {
    width: 100%;
  }

  .dark-background-spacer {
    height: 20px;
  }

}

